<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/r80"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/horizontal_layout"
                android:background="#4D000000"
                android:text="Pesawat R80"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_airplanemode_active_white_24dp"
                android:drawablePadding="4dp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginTop="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="B.J. Habibie"
            android:textColor="@android:color/black"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="Presiden Ke 3 Indonesia"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="@string/content_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginTop="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/vertical_layout">
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Nama"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="TTL"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/TTL"

                    android:textColor="@android:color/holo_red_light"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/Penemuan"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:text="@string/Penemuan"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/Penemuan"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/holo_blue_bright"
                    android:text="@string/Penemuan"
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="Donasi"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/Donasi"
                    android:textSize="14sp"/>
            </TableRow>

        </TableLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/r80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/vertical_layout"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/r80"
                android:layout_toRightOf="@id/r80"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/ajakan"/>
        </RelativeLayout>
        <Button
            android:id="@+id/donat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Donasi"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"/>
    </LinearLayout>

</ScrollView>